# bling_reports

./: pyproject.toml
bling_reports/: main.py
bling_reports/bling/: bling_api.py  dto.py
bling_reports/models/: sales.py
bling_reports/reports/: __init__.py  weekly_sales.py
reports/: main.py  weekly_sales.py
reports/bling/: bling_api.py  dto.py
reports/models/: sales.py
reports/reports/: weekly_sales.py
tests/bling/: example_list_sales_response.json  test_bling_api.py  test_dto.py
tests/reports/: test_weekly_report.py
tests/resources/: bling_no_resource_found.json
